RESOLVED FIXED171867
-Wreturn-type warning triggered by WebAutomationSession.cpp:851
https://bugs.webkit.org/show_bug.cgi?id=171867
Summary -Wreturn-type warning triggered by WebAutomationSession.cpp:851
Michael Catanzaro
Reported 2017-05-09 11:03:08 PDT
[3497/4357] Building CXX object Source.../Automation/WebAutomationSession.cpp.o ../../Source/WebKit2/UIProcess/Automation/WebAutomationSession.cpp: In function ‘WebKit::WebEvent::Modifiers WebKit::protocolModifierToWebEventModifier(Inspector::Protocol::Automation::KeyModifier)’: ../../Source/WebKit2/UIProcess/Automation/WebAutomationSession.cpp:858:1: warning: control reaches end of non-void function [-Wreturn-type] } ^
Attachments
Patch (1.31 KB, patch)
2017-05-10 15:28 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2017-05-10 15:28:03 PDT
Michael Catanzaro
Comment 2 2017-05-20 08:05:31 PDT
Ping reviewers
WebKit Commit Bot
Comment 3 2017-05-22 11:11:57 PDT
Comment on attachment 309647 [details] Patch Clearing flags on attachment: 309647 Committed r217226: <http://trac.webkit.org/changeset/217226>
WebKit Commit Bot
Comment 4 2017-05-22 11:11:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.