-Wreturn-type warning triggered by WebAutomationSession.cpp:851 https://bugs.webkit.org/show_bug.cgi?id=171867

Reviewed by Žan Doberšek.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::protocolModifierToWebEventModifier):


Canonical link: https://commits.webkit.org/189352@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217226 268f45cc-cd09-0410-ab3c-d52691b4dbfc